Fix: there was jump, when icon was clicked with the scroll middle way

--- a/static/css/select_topic.css
+++ b/static/css/select_topic.css
@@ -46,6 +46,11 @@ body {
     transform: translate(-50%,-50%);
 }
 
+.inicial-icon-height{
+    top: 30vh !important;
+    transition: all 0.4s ease-in-out;
+}
+
 .place-icon-top-left {
     opacity: 1 !important;
     left: 50px !important;
